:sparkles: Add BatchHandler (#309)
* Introduces /batch/tickets and /batch/tags endpoints
  which support POSTing a slice of the respective resources
  to create them. Creation is all or nothing-- if any fail
  to be created the entire operation is rolled back.
* Responsibility for rendering responses has been delegated
  to a Render handler. The Render handler builds the response
  from values set on a Response struct on the rich context.
* Moves the k8s Client into the rich context

---------
